Introduce very simple authenticity/authorisation
Authenticity token (set in session, sent with each request) makes sure that
message is from the client to whom we sent the token. This defends against
Cross Site Request Forgery.

Authorisiation is currently (mis)managed by taking the user's word for who
they are, and then holding them to that, using the session. Makes it slightly
harder to cheat by changing the handle in the data-handle attribute or by sending
a JS request to the websocket with the wrong game name/an enemy's handle.

Reordered config.ru/app.rb lines so that cookies are set before middleware is
used, which is necessary so that the middleware can use the session.

--- a/views/application.js.erb
+++ b/views/application.js.erb
@@ -20,6 +20,10 @@ const readTheWord = () => {
   return $("#word-form-input")[0].value;
 }
 
+const readTheAuthenticityToken = () => {
+  return $("#authenticity-token-data-div").data("authenticity-token");
+}
+
 const updateTiles = (data) => {
   let tileCards = ''
   data.tiles.forEach((tile, index) => {
@@ -48,6 +52,7 @@ const updateTiles = (data) => {
     $(identifier).click((event) => {
       event.preventDefault();
       ws.send(JSON.stringify({
+        authenticity_token: readTheAuthenticityToken(),
         action: 'flip',
         room: readTheRoom(),
         handle: readTheHandle(),
@@ -107,6 +112,7 @@ $("#handle-form").on("submit", function(event) {
     return
   }
   ws.send(JSON.stringify({
+    authenticity_token: readTheAuthenticityToken(),
     action: 'join',
     room: readTheRoom(),
     handle: handle
@@ -126,8 +132,8 @@ $("#word-form").on("submit", function(event) {
   if (word === '') {
     return
   }
-  console.log(readTheRoom())
   ws.send(JSON.stringify({
+    authenticity_token: readTheAuthenticityToken(),
     action: 'word',
     room: readTheRoom(),
     handle: readTheHandle(),
