--- a/views/index.html.erb
+++ b/views/index.html.erb
@@ -31,6 +31,7 @@
         <div id="tiles-container" class="col-md-7"></div>
         <div id="word-container" class="col-md-5"></div>
         <div id="handle-container"></div>
+        <div id="authenticity-token-data-div" data-authenticity-token=<%= @authenticity_token %>></div>
       </div>
     </div>
 
